--- a/components-alerts.html
+++ b/components-alerts.html
@@ -139,9 +139,9 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="index.html">
           <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
+          <span>Turmas</span>
         </a>
-      </li><!-- End Dashboard Nav -->
+      </li><!-- End Turmas Nav -->
 
       <li class="nav-item">
         <a class="nav-link " data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
