adiciona modal de criar turma

--- a/index.html
+++ b/index.html
@@ -383,6 +383,29 @@
     <section class="section dashboard">
       <div class="row">
 
+        <div class="d-flex mb-3">
+          <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+            Nova Turma
+          </button>
+
+          <div class="modal fade" id="largeModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Criar nova Turma</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="button" class="btn btn-primary">Criar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div>
           <div class="row">
 
