adiciona formulario para criar turma

--- a/index.html
+++ b/index.html
@@ -395,8 +395,37 @@
                   <h5 class="modal-title">Criar nova Turma</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+                
                 <div class="modal-body">
+                  <form class="row g-3">
+                    <div class="col-12">
+                      <label for="inputNanme4" class="form-label">Código</label>
+                      <input type="text" class="form-control" id="inputNanme4">
+                    </div>
+
+                    <div class="col-12">
+                      <label for="inputNanme4" class="form-label">Nome</label>
+                      <input type="text" class="form-control" id="inputNanme4">
+                    </div>
+
+                    <div class="col-12">
+                      <label for="inputNanme4" class="form-label">Senha de acesso</label>
+                      <input type="text" class="form-control" id="inputNanme4">
+                    </div>
+
+                    <div class="col-12">
+                      <label class="form-label">Situação</label>
+                      <div>
+                        <select class="form-select" aria-label="Default select example">
+                          <option selected>Selecione...</option>
+                          <option value="1">Em Progresso</option>
+                          <option value="2">Encerrada</option>
+                        </select>
+                      </div>
+                    </div>
+                  </form>
                 </div>
+
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                   <button type="button" class="btn btn-primary">Criar</button>
@@ -421,6 +450,7 @@
                         <th scope="col">Código</th>
                         <th scope="col">Nome</th>
                         <th scope="col">Situação</th>
+                        <th scope="col">Senha</th>
                         <th scope="col">Alunos</th>
                         <th scope="col">Criada Em</th>
                       </tr>
@@ -430,6 +460,7 @@
                         <th scope="row">T203-84</th>
                         <td>Ambiente de Dados</td>
                         <td>Em Progresso</td>
+                        <td>V@qwJJ</td>
                         <td>14</td>
                         <td>2023-05-25</td>
                       </tr>
@@ -437,6 +468,7 @@
                         <th scope="row">N391-84</th>
                         <td>Projeto aplic desenv software</td>
                         <td>Em Progresso</td>
+                        <td>r@oTg1</td>
                         <td>35</td>
                         <td>2023-05-25</td>
                       </tr>
