--- a/index.html
+++ b/index.html
@@ -142,8 +142,14 @@
           <i class="bi bi-grid"></i>
           <span>Turmas</span>
         </a>
-      </li><!-- End Turmas Nav -->
+      </li>
 
+      <li class="nav-item">
+        <a class="nav-link " href="flash-cards.html">
+          <i class="bi bi-grid"></i>
+          <span>Flash Cards</span>
+        </a>
+      </li>
 
       <li class="nav-heading">Pages</li>
 
