adiciona crud de flashcards

--- a/flash-cards.html
+++ b/flash-cards.html
@@ -240,30 +240,19 @@
                     <div class="modal-body">
                     <form class="row g-3">
                         <div class="col-12">
-                        <label for="inputNanme4" class="form-label">Código</label>
-                        <input type="text" class="form-control" id="inputNanme4">
+                            <label for="inputNanme4" class="form-label">Pergunta</label>
+                            <textarea class="form-control">
+                                Quem foi o primeiro o ovo ou a galinha?
+                            </textarea>
                         </div>
 
                         <div class="col-12">
-                        <label for="inputNanme4" class="form-label">Nome</label>
-                        <input type="text" class="form-control" id="inputNanme4">
+                            <label for="inputNanme4" class="form-label">Resposta</label>
+                            <textarea class="form-control">
+                                A questão é complicada e não tinha um consenso, ainda que a teoria mais aceita seja a que o ovo veio primeiro. Segundo alguns cientistas, o ovo veio primeiro — eles teriam surgido há cerca de 340 milhões de anos, enquanto as galinhas apareceram há 50 milhões de anos.
+                            </textarea>
                         </div>
 
-                        <div class="col-12">
-                        <label for="inputNanme4" class="form-label">Senha de acesso</label>
-                        <input type="text" class="form-control" id="inputNanme4">
-                        </div>
-
-                        <div class="col-12">
-                        <label class="form-label">Situação</label>
-                        <div>
-                            <select class="form-select" aria-label="Default select example">
-                            <option selected>Selecione...</option>
-                            <option value="1">Em Progresso</option>
-                            <option value="2">Encerrada</option>
-                            </select>
-                        </div>
-                        </div>
                     </form>
                     </div>
 
@@ -283,28 +272,22 @@
               <div class="card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Suas Turmas</h5>
+                  <h5 class="card-title">Flash Cards</h5>
                   
                   <table class="table table-striped">
                     <thead>
                       <tr>
                         <th scope="col">Código</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Situação</th>
-                        <th scope="col">Senha</th>
-                        <th scope="col">Alunos</th>
-                        <th scope="col">Criada Em</th>
+                        <th scope="col">Pergunta</th>
+                        <th scope="col">Resposta</th>
                         <th scope="col">Ações</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row">84</th>
-                        <td>Ambiente de Dados</td>
-                        <td>Em Progresso</td>
-                        <td>V@qwJJ</td>
-                        <td>14</td>
-                        <td>2023-05-25</td>
+                        <th scope="row">1</th>
+                        <td>Quem foi o primeiro o ovo ou a galinha?</td>
+                        <td>A questão é complicada e não tinha um consenso, ainda que a teoria mais aceita seja a que o ovo veio primeiro. Segundo alguns cientistas, o ovo veio primeiro — eles teriam surgido há cerca de 340 milhões de anos, enquanto as galinhas apareceram há 50 milhões de anos.</td>
                         <td>
                           <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#largeModal">
                             <i class="fas fa-edit cursor-pointer"></i>
@@ -315,12 +298,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row">84</th>
-                        <td>Projeto aplic desenv software</td>
-                        <td>Em Progresso</td>
-                        <td>r@oTg1</td>
-                        <td>35</td>
-                        <td>2023-05-25</td>
+                        <th scope="row">1</th>
+                        <td>O que quer dizer a palavra reino?</td>
+                        <td>Nação ou Estado governado por príncipe reinante que tem título de rei ou de rainha.</td>
                         <td>
                           <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#largeModal">
                             <i class="fas fa-edit cursor-pointer"></i>
