--- a/index.html
+++ b/index.html
@@ -152,15 +152,27 @@
       </li>
 
       <li class="nav-heading">Pages</li>
+      
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-teacher-register.html">
+          <i class="bi bi-person"></i>
+          <span>Professores</span>
+        </a>
+      </li>
 
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-institutions-register.html">
+          <i class="bi bi-person"></i>
+          <span>Insituições</span>
+        </a>
+      </li>
+      
       <li class="nav-item">
         <a class="nav-link collapsed" href="users-profile.html">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
         </a>
-      </li><!-- End Profile Page Nav -->
-
-
+      </li>
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="pages-register.html">
