--- a/users-profile.html
+++ b/users-profile.html
@@ -147,6 +147,20 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-teacher-register.html">
+          <i class="bi bi-person"></i>
+          <span>Professores</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-institutions-register.html">
+          <i class="bi bi-person"></i>
+          <span>Insituições</span>
+        </a>
+      </li>
+      
+      <li class="nav-item">
         <a class="nav-link collapsed" href="users-profile.html">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
