adiciona mais uma coisas ai

--- a/flash-cards.html
+++ b/flash-cards.html
@@ -222,7 +222,7 @@
                 </div>
 
                 <div>
-                    <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+                    <button type="button" class="btn cor-roxa ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
                         Novo Flash Card
                     </button>
                 </div>
