--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
+  <header id="header" class="header fixed-top d-flex align-items-center cor-amarela">
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
@@ -208,7 +208,7 @@
       <div class="row">
 
         <div class="d-flex mb-3">
-          <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+          <button type="button" class="btn cor-roxa ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
             Nova Turma
           </button>
 
