--- a/pages-login.html
+++ b/pages-login.html
@@ -88,7 +88,7 @@
                       </div>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Entrar</button>
+                      <button class="btn cor-roxa w-100" type="submit">Entrar</button>
                     </div>
                     <div class="col-12">
                       <p class="small mb-0">Não tem uma conta? <a href="pages-register.html">Crie uma conta!</a></p>
