--- a/pages-register.html
+++ b/pages-register.html
@@ -99,7 +99,7 @@
                       </div>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Criar Conta</button>
+                      <button class="btn cor-roxa w-100" type="submit">Criar Conta</button>
                     </div>
                     <div class="col-12">
                       <p class="small mb-0">Já tem uma conta? <a href="pages-login.html">Entre</a></p>
