--- a/pages-teacher-register.html
+++ b/pages-teacher-register.html
@@ -208,7 +208,7 @@
       <div class="row">
 
         <div class="d-flex mb-3">
-          <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+          <button type="button" class="btn cor-roxa ms-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
             Novo Professor
           </button>
 
