--- a/pages-login.html
+++ b/pages-login.html
@@ -118,7 +118,21 @@
   <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
   <script src="assets/vendor/tinymce/tinymce.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Encontrar o formulário pelo ID
+      const loginForm = document.querySelector('form');
+  
+      // Adicionar um ouvinte de evento para o evento de envio do formulário
+      loginForm.addEventListener('submit', function (event) {
+        // Prevenir o comportamento padrão de envio do formulário
+        event.preventDefault();
+  
+        // Redirecionar para index.html
+        window.location.href = 'index.html';
+      });
+    });
+  </script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
