--- a/users-profile.html
+++ b/users-profile.html
@@ -172,7 +172,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="pages-register.html">
           <i class="bi bi-card-list"></i>
-          <span>Se Registrar</span>
+          <span>Atualizar Senha</span>
         </a>
       </li><!-- End Register Page Nav -->
 
