--- a/flash-cards.html
+++ b/flash-cards.html
@@ -254,6 +254,28 @@
                     <div class="modal-body">
                     <form class="row g-3">
                         <div class="col-12">
+                            <label class="form-label">Código da Turma</label>
+                            <div>
+                                <select class="form-select" aria-label="Default select example">
+                                <option selected>Digite ou selecione...</option>
+                                <option value="1">Ambiente de Dados</option>
+                                <option value="2">Projeto aplic desenv software</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <label class="form-label">Nome da Turma</label>
+                            <div>
+                                <select class="form-select" aria-label="Default select example">
+                                <option selected>Digite ou selecione...</option>
+                                <option value="1">Ambiente de Dados</option>
+                                <option value="2">Projeto aplic desenv software</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
                             <label for="inputNanme4" class="form-label">Pergunta</label>
                             <textarea class="form-control">
                                 Quem foi o primeiro o ovo ou a galinha?
